syntax = "proto3";

option csharp_namespace = "SampleGrpcClient";

// Imports
import "google/protobuf/wrappers.proto";

package sample;

message SampleData {
  google.protobuf.StringValue Id = 1;
  google.protobuf.StringValue CreateDate = 2;
  google.protobuf.StringValue UpdateDate = 3;
  google.protobuf.StringValue SampleStringData = 4;
  google.protobuf.Int32Value SampleIntData = 5;
}

service Sample { rpc GetAll(GetAllRequest) returns (GetAllReply); }

message GetAllRequest {}

message GetAllReply { repeated SampleData sample = 1; }